@@ -1,8 +1,5 @@
 package com.revengemission.sso.oauth2.server.config;
 
-import com.fasterxml.jackson.core.JsonEncoding;
-import com.fasterxml.jackson.core.JsonGenerator;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.revengemission.sso.oauth2.server.domain.GlobalConstant;
 import com.revengemission.sso.oauth2.server.domain.LoginHistory;
 import com.revengemission.sso.oauth2.server.domain.ResponseResult;
@@ -18,10 +15,13 @@ import org.springframework.http.converter.HttpMessageNotWritableException;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationFailureHandler;
 import org.springframework.stereotype.Component;
+import tools.jackson.core.JsonEncoding;
+import tools.jackson.core.JsonGenerator;
+import tools.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @Component
 public class CustomAuthenticationFailureHandler extends SimpleUrlAuthenticationFailureHandler {
@@ -37,12 +37,14 @@ public class CustomAuthenticationFailureHandler extends SimpleUrlAuthenticationF
     @Override
     public void onAuthenticationFailure(HttpServletRequest request,
                                         HttpServletResponse response, AuthenticationException exception)
-            throws IOException {
+        throws IOException {
         String username = request.getParameter("username");
-        log.debug(username + " try to login");
+        String clientId = request.getParameter("client_id");
+        log.debug("{} try to login", username);
 
         LoginHistory loginHistory = new LoginHistory();
         loginHistory.setUsername(username);
+        loginHistory.setClientId(clientId);
         loginHistory.setIp(ClientIpUtil.getIpAddress(request));
         loginHistory.setDevice(request.getHeader("User-Agent"));
         loginHistory.setRecordStatus(0);
@@ -52,8 +54,8 @@ public class CustomAuthenticationFailureHandler extends SimpleUrlAuthenticationF
         userAccountService.loginFailure(username);
 
         boolean isAjax = "XMLHttpRequest".equals(request
-                .getHeader("X-Requested-With")) || "apiLogin".equals(request
-                .getHeader("api-login"));
+            .getHeader("X-Requested-With")) || "apiLogin".equals(request
+            .getHeader("api-login"));
         if (isAjax) {
             response.setHeader("Content-Type", "application/json;charset=UTF-8");
             try {
@@ -61,8 +63,8 @@ public class CustomAuthenticationFailureHandler extends SimpleUrlAuthenticationF
                 responseMessage.setStatus(GlobalConstant.ERROR);
                 responseMessage.setMessage(exception.getMessage());
                 ObjectMapper objectMapper = new ObjectMapper();
-                JsonGenerator jsonGenerator = objectMapper.getFactory().createGenerator(response.getOutputStream(),
-                        JsonEncoding.UTF8);
+                JsonGenerator jsonGenerator = objectMapper.createGenerator(response.getOutputStream(),
+                    JsonEncoding.UTF8);
                 objectMapper.writeValue(jsonGenerator, responseMessage);
             } catch (Exception ex) {
                 if (log.isErrorEnabled()) {
@@ -71,14 +73,7 @@ public class CustomAuthenticationFailureHandler extends SimpleUrlAuthenticationF
                 throw new HttpMessageNotWritableException("Could not write JSON: " + ex.getMessage(), ex);
             }
         } else {
-            String encodedMessage = "";
-            try {
-                encodedMessage = URLEncoder.encode(exception.getMessage(), "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                if (log.isErrorEnabled()) {
-                    log.error("encodedMessage", e);
-                }
-            }
+            String encodedMessage = URLEncoder.encode(exception.getMessage(), StandardCharsets.UTF_8);
             response.sendRedirect(failureUrl + "?authentication_error=true&error=" + encodedMessage);
             /*super.onAuthenticationFailure(request, response, exception);*/
         }
